cmake_minimum_required(VERSION 2.8.3)

option(STANDALONE "Use MY_LIB instead of THEIR_LIB" OFF) #OFF by default
if(STANDALONE)
    MESSAGE( "[WARN from mpkuse] Will compile standalone. CMakeLists.standalone.txt" )
    include( CMakeLists.standalone.txt)
else()
    MESSAGE( "[WARN from mpkuse] This compiles as rospackage." )
    MESSAGE( "[WARN from mpkuse] Do not run cmake on this." )
    MESSAGE( "[WARN from mpkuse] If you need a standalone compile do:" )
    MESSAGE( "[WARN from mpkuse] cmake ../ -DSTANDALONE=ON" )
    MESSAGE( "[WARN from mpkuse]" )
    MESSAGE( "[WARN from mpkuse] If this is run from catkin_make, ignore this warn-message")
    MESSAGE( "[WARN from mpkuse]" )
    include( CMakeLists.rospkg.txt)
endif(STANDALONE)
unset(STANDALONE CACHE)
